[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/scripts/messages.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/PixelFont.ttf"

[sub_resource type="DynamicFont" id=2]
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "fade_out_message"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Control" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border" type="ColorRect" parent="."]
margin_right = 392.0
margin_bottom = 72.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shadow" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = 8.0
margin_right = 376.0
margin_bottom = 80.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 384.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_message" type="Label" parent="background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.0
margin_top = -8.0
margin_right = 188.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "error message"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dissapear_timer" type="Timer" parent="."]
wait_time = 10.0

[node name="fade_out_animation" type="AnimationPlayer" parent="."]
anims/fade_out_message = SubResource( 3 )

[connection signal="timeout" from="dissapear_timer" to="." method="_on_dissapear_timer_timeout"]
